[package]
name = "brainfuck_interpreter"
version = "0.1.0"
authors = ["Nick Grüßner <n.gruessner@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"

[lib]
crate-type = ["lib", "cdylib"]
